# chat-app-actix-server

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-10-11-145308_chat_users_table/: down.sql  up.sql
migrations/2024-10-24-174623_chat_users_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/chat_connectivity/: auth2.rs  capture_code.rs  connectivity_establishment.rs  mod.rs
src/chat_users/: create_chat_user.rs  delete_chat_user.rs  mod.rs  read_chat_user.rs  update_chat_user.rs
