[package]
name = "chat-app-actix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
json = "0.12.4"
serde = { version = "1.0.210", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
