[package]
name = "chat-app-actix-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
hyper = { version = "1.4.1", features = ["server"] }
json = "0.12.4"
oauth2 = "4.4.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
validator = { version = "0.18.1", features = ["derive"] }
